[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "objects"
version = "0.1.0"
description = "Reusable models and database layer for VPN project"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
requires-python = ">=3.8"
dependencies = [
    "asyncpg>=0.23.0",
    "pydantic>=1.10.0",
]

[tool.setuptools.packages.find]
include = ["objects", "objects.*"]